trunk/Archive2/39/dab7587e216eee/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:17:16: error: implicit instantiation of undefined template 'foo<1, int *>'
  std::cout << foo<BOO, int*>::bar() << std::endl;
               ^
main.cpp:5:8: note: template is declared here
struct foo;
       ^
1 error generated.
